force-app/main/default/objects/DD_Quote_Rate_Result__c/DD_Quote_Rate_Result__c.object-meta.xml
<CustomObject>
    <description>Calculated rate output per tier. Regenerated on each rate calculation.</description>
    <label>Quote Rate Result</label>
    <nameField><displayFormat>QRR-{000000}</displayFormat><label>Result ID</label><type>AutoNumber</type></nameField>
    <pluralLabel>Quote Rate Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>