force-app/main/default/objects/DD_Quote_Rate_Result__c/fields/Employer_Share__c.field-meta.xml
<CustomField>
    <fullName>Employer_Share__c</fullName>
    <label>Employer Share</label>
    <type>Currency</type>
    <precision>18</precision><scale>2</scale><required>false</required>
    <description>Employer portion of premium</description>
</CustomField>