force-app/main/default/objects/DD_Quote_Rate_Result__c/fields/Enrolled_Count__c.field-meta.xml
<CustomField>
    <fullName>Enrolled_Count__c</fullName>
    <label>Enrolled Count</label>
    <type>Number</type>
    <precision>4</precision><scale>0</scale><required>false</required><unique>false</unique><externalId>false</externalId>
    <description>Number of members in this tier</description>
</CustomField>