force-app/main/default/objects/DD_Quote_Rate_Result__c/fields/Monthly_Premium__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Premium__c</fullName>
    <label>Monthly Premium</label>
    <type>Currency</type>
    <precision>18</precision><scale>2</scale><required>true</required>
    <description>Rate x enrolled count</description>
</CustomField>