force-app/main/default/objects/DD_Quote_Rate_Result__c/fields/Monthly_Rate__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Rate__c</fullName>
    <label>Monthly Rate</label>
    <type>Currency</type>
    <precision>18</precision><scale>2</scale><required>true</required>
    <description>Per member per month rate</description>
</CustomField>