force-app/main/default/objects/DD_Quote_Rate_Result__c/fields/Rate_Factors_JSON__c.field-meta.xml
<CustomField>
    <fullName>Rate_Factors_JSON__c</fullName>
    <label>Rate Factors</label>
    <type>LongTextArea</type>
    <length>5000</length><visibleLines>4</visibleLines>
    <description>Full factor breakdown for audit trail</description>
</CustomField>